publish: update example dqn data
generated from commit beb9b1d65cdb82fe3e9e4ca695622af67345516e

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id="openai-lab">OpenAI Lab </br> <a href="https://circleci.com/gh/kengz/openai_lab"><img src="https://circleci.com/gh/kengz/openai_lab.svg?style=shield" alt="CircleCI" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;amp;utm_medium=referral&amp;amp;utm_content=kengz/openai_lab&amp;amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a0e6bbbb6c4845ccaab2db9aecfecbb0" alt="Codacy Badge" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/forks/kengz/openai_lab.svg?style=social&amp;label=Fork" alt="GitHub forks" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/stars/kengz/openai_lab.svg?style=social&amp;label=Star" alt="GitHub stars" /></a></h1>
+        <h1 id="openai-lab">OpenAI Lab </br> <a href="https://circleci.com/gh/kengz/openai_lab"><img src="https://circleci.com/gh/kengz/openai_lab.svg?style=shield" alt="CircleCI" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;amp;utm_medium=referral&amp;amp;utm_content=kengz/openai_lab&amp;amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a0e6bbbb6c4845ccaab2db9aecfecbb0" alt="Codacy Badge" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=kengz/openai_lab&amp;utm_campaign=Badge_Coverage"><img src="https://api.codacy.com/project/badge/Coverage/9e55f845b10b4b51b213620bfb98e4b3" alt="Codacy Badge" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/forks/kengz/openai_lab.svg?style=social&amp;label=Fork" alt="GitHub forks" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/stars/kengz/openai_lab.svg?style=social&amp;label=Star" alt="GitHub stars" /></a></h1>
 
 <p><strong>(DOC UNDER CONSTRUCTION)</strong></p>
 
@@ -315,76 +315,76 @@
 </tr>
 </thead><tbody>
 <tr>
-<td style="text-align: left">1.39203</td>
-<td style="text-align: left">2.32005</td>
-<td style="text-align: left">171.7815</td>
-<td style="text-align: left">120.0</td>
-<td style="text-align: left">0.6</td>
-<td style="text-align: left">5</td>
-<td style="text-align: left">200.0</td>
-<td style="text-align: left">189.8</td>
-<td style="text-align: left">dqn-2017_02_21_182442_t46</td>
-<td style="text-align: left">10</td>
-<td style="text-align: left">0.99</td>
-<td style="text-align: left">[32]</td>
-<td style="text-align: left">0.02</td>
-</tr>
-<tr>
-<td style="text-align: left">1.239977</td>
-<td style="text-align: left">1.239977</td>
-<td style="text-align: left">195.272</td>
-<td style="text-align: left">167.2</td>
+<td style="text-align: left">1.178061</td>
+<td style="text-align: left">1.178061</td>
+<td style="text-align: left">195.726</td>
+<td style="text-align: left">169.2</td>
 <td style="text-align: left">1.0</td>
 <td style="text-align: left">5</td>
 <td style="text-align: left">200.0</td>
-<td style="text-align: left">199.0</td>
-<td style="text-align: left">dqn-2017_02_21_182442_t45</td>
+<td style="text-align: left">196.4</td>
+<td style="text-align: left">dqn-2017_02_27_002407_t44</td>
 <td style="text-align: left">10</td>
 <td style="text-align: left">0.99</td>
 <td style="text-align: left">[32]</td>
-<td style="text-align: left">0.01</td>
+<td style="text-align: left">0.001</td>
 </tr>
 <tr>
-<td style="text-align: left">1.196581</td>
-<td style="text-align: left">1.196581</td>
-<td style="text-align: left">195.372</td>
+<td style="text-align: left">1.173569</td>
+<td style="text-align: left">1.173569</td>
+<td style="text-align: left">195.47</td>
 <td style="text-align: left">168.0</td>
 <td style="text-align: left">1.0</td>
 <td style="text-align: left">5</td>
 <td style="text-align: left">200.0</td>
 <td style="text-align: left">199.0</td>
-<td style="text-align: left">dqn-2017_02_21_182442_t80</td>
-<td style="text-align: left">20</td>
+<td style="text-align: left">dqn-2017_02_27_002407_t32</td>
+<td style="text-align: left">10</td>
 <td style="text-align: left">0.97</td>
 <td style="text-align: left">[32]</td>
 <td style="text-align: left">0.001</td>
 </tr>
 <tr>
-<td style="text-align: left">1.192967</td>
-<td style="text-align: left">1.192967</td>
-<td style="text-align: left">196.102</td>
-<td style="text-align: left">165.4</td>
+<td style="text-align: left">1.152447</td>
+<td style="text-align: left">1.152447</td>
+<td style="text-align: left">195.248</td>
+<td style="text-align: left">170.6</td>
+<td style="text-align: left">1.0</td>
+<td style="text-align: left">5</td>
+<td style="text-align: left">200.0</td>
+<td style="text-align: left">198.2</td>
+<td style="text-align: left">dqn-2017_02_27_002407_t64</td>
+<td style="text-align: left">20</td>
+<td style="text-align: left">0.96</td>
+<td style="text-align: left">[16]</td>
+<td style="text-align: left">0.001</td>
+</tr>
+<tr>
+<td style="text-align: left">1.128509</td>
+<td style="text-align: left">1.128509</td>
+<td style="text-align: left">195.392</td>
+<td style="text-align: left">177.8</td>
 <td style="text-align: left">1.0</td>
 <td style="text-align: left">5</td>
 <td style="text-align: left">200.0</td>
 <td style="text-align: left">199.0</td>
-<td style="text-align: left">dqn-2017_02_21_182442_t68</td>
+<td style="text-align: left">dqn-2017_02_27_002407_t92</td>
 <td style="text-align: left">20</td>
-<td style="text-align: left">0.96</td>
+<td style="text-align: left">0.99</td>
 <td style="text-align: left">[32]</td>
 <td style="text-align: left">0.001</td>
 </tr>
 <tr>
-<td style="text-align: left">1.191591</td>
-<td style="text-align: left">1.191591</td>
-<td style="text-align: left">195.49</td>
-<td style="text-align: left">166.2</td>
+<td style="text-align: left">1.127216</td>
+<td style="text-align: left">1.127216</td>
+<td style="text-align: left">195.584</td>
+<td style="text-align: left">175.0</td>
 <td style="text-align: left">1.0</td>
 <td style="text-align: left">5</td>
 <td style="text-align: left">200.0</td>
-<td style="text-align: left">195.0</td>
-<td style="text-align: left">dqn-2017_02_21_182442_t28</td>
-<td style="text-align: left">10</td>
+<td style="text-align: left">199.0</td>
+<td style="text-align: left">dqn-2017_02_27_002407_t76</td>
+<td style="text-align: left">20</td>
 <td style="text-align: left">0.97</td>
 <td style="text-align: left">[16]</td>
 <td style="text-align: left">0.001</td>
@@ -396,7 +396,7 @@
 <p>On completion, from the analytics (zoom on the graph), we conclude that the experiment is a success, and the best agent that solves the problem has the parameters:</p>
 
 <ul>
-<li><em>lr</em>: 0.1</li>
+<li><em>lr</em>: 0.001</li>
 <li><em>gamma</em>: 0.99</li>
 <li><em>hidden_layers_shape</em>: [32]</li>
 <li><em>exploration_anneal_episodes</em>: 10</li>
