publish: update description
generated from commit 6a63b64a081cc27e6743d063b4a59975c0c2ab03

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
         <ul class="toc-footer">
             <li><a href='https://github.com/kengz/openai_lab'>OpenAI Lab Github</a></li>
             <li><a href='https://github.com/openai/gym'>OpenAI Gym Github</a></li>
+            <li><a href='https://github.com/fchollet/keras'>Keras Github</a></li>
             <li><a href='https://youtu.be/qBhLoeijgtA'>RL Tutorial video part 1/2</a></li>
             <li><a href='https://youtu.be/wNSlZJGdodE'>RL Tutorial video part 2/2</a></li>
         </ul>
@@ -211,13 +212,11 @@
 
 <p><em>An experimentation system for Reinforcement Learning using OpenAI and Keras.</em></p>
 
-<p>This lab is created to let us do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. We can theorize as fast as we think, and experiment as fast as the computers can run.</p>
+<p>The <em>OpenAI Lab</em> is created to let us do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. We can theorize as fast as we think, and experiment as fast as the computers can run.</p>
 
-<p>With <em>OpenAI Lab</em>, we had solved a few OpenAI environments by running dozens of experiments, each with hundreds of trials. Each new experiment takes minimal effort to setup and run - we will show by example below.</p>
+<p>The lab provides an easy-to-use interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, combined with an automated experimental and analytics framework. We had tested several deep reinforcement learning algorithms with <em>OpenAI Lab</em> and solved a few OpenAI environments - by running hundreds of experiments with minimal setup and few lines of code - we will show by example below.</p>
 
-<p>Before this, experiments used to be hard and slow, because we often have to write most things from scratch and reinvent the wheels. To solve this, the lab provides a standard, extensible platform with a host of reusable components.</p>
-
-<p><em>OpenAI Lab</em> lowers the experimental complexity and enables an explosion of experiments - we can quickly add new RL component, make new combinations, run hyperparameter selection and solve the environments. This unlocks a new perspective to treat RL as a full-on experimental science.</p>
+<p>Before this, experiments used to be hard and slow, as we often have to write most things from scratch and reinvent the wheels. To solve this, the lab provides a standard, extensible platform with a host of reusable components. This lowers the experimental complexity and enables an explosion of experiments. We can quickly add new RL component, make new combinations, run hyperparameter selection and solve environments. This unlocks a new perspective to treat RL as a full-on experimental science.</p>
 
 <p><img alt="Timelapse of OpenAI Lab" src="./images/lab_demo_dqn.gif" />
 <em>Timelapse of OpenAI Lab (open the gif in new tab for larger size).</em></p>
