--- a/index.html
+++ b/index.html
@@ -731,14 +731,9 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 
 <h2 id="submission-instructions">Submission instructions</h2>
 
-<p>If you invent a new algorithm/combination that beats the best solutions, please submit a <a href="https://github.com/kengz/openai_lab/pulls">Pull Request</a> to the OpenAI Lab. <strong>Commit</strong> only the source code, and <strong>attach</strong> the following files (to limit the repo size). to the PR:</p>
+<p>If you invent a new algorithm/combination that beats the best solutions, please submit a <a href="https://github.com/kengz/openai_lab/pulls">Pull Request</a> to the OpenAI Lab.</p>
 
-<ul>
-<li><code class="prettyprint">&lt;experiment_id&gt;_analysis.png</code></li>
-<li><code class="prettyprint">&lt;experiment_id&gt;_analysis_correlation.png</code></li>
-<li><code class="prettyprint">&lt;experiment_id&gt;_analysis_data.csv</code></li>
-<li><code class="prettyprint">&lt;best_trial_id&gt;.json</code></li>
-</ul>
+<p>Refer to the <a href="https://github.com/kengz/openai_lab/blob/master/.github/PULL_REQUEST_TEMPLATE.md">PR template</a> for submission guideline.</p>
 
 <h2 id="algorithms">Algorithms</h2>
 
@@ -789,6 +784,16 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 <td style="text-align: left">-</td>
 </tr>
 <tr>
+<td style="text-align: left"><a href="https://en.wikipedia.org/wiki/Cross-entropy_method">CEM (Cross Entropy Method)</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+</tr>
+<tr>
+<td style="text-align: left"><a href="https://webdocs.cs.ualberta.ca/~sutton/papers/SMSM-NIPS99.pdf">PG (Policy Gradient)</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+</tr>
+<tr>
 <td style="text-align: left"><a href="http://jmlr.org/proceedings/papers/v32/silver14.pdf">DPG (Deterministic Policy Gradient aka actor-critic)</a></td>
 <td style="text-align: left">in-progress</td>
 <td style="text-align: left">-</td>
@@ -800,6 +805,11 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 </tr>
 <tr>
 <td style="text-align: left"><a href="https://arxiv.org/pdf/1602.01783.pdf">A3C (asynchronous advantage actor-critic)</a></td>
+<td style="text-align: left">-</td>
+<td style="text-align: left">-</td>
+</tr>
+<tr>
+<td style="text-align: left"><a href="https://arxiv.org/abs/1502.05477">TRPO</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -817,6 +827,8 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 
 <h2 id="problems">Problems</h2>
 
+<p>The list of accepted solutions can be seen in the <a href="https://github.com/kengz/openai_lab/pulls?q=is%3Apr+label%3Asolution+is%3Aclosed"><code class="prettyprint">solution</code> PRs</a></p>
+
 <h3 id="classic-problems">Classic Problems</h3>
 
 <table><thead>
@@ -830,10 +842,10 @@ python3 main.py -bp -t 5 -e dqn | tee -a ./data/terminal.log;
 </thead><tbody>
 <tr>
 <td style="text-align: left">CartPole-v0</td>
-<td style="text-align: left">5.3060</td>
+<td style="text-align: left">5.305995</td>
 <td style="text-align: left">14</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left"><a href="http://kengz.me/openai_lab">dqn</a></td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/73">dqn</a></td>
 </tr>
 <tr>
 <td style="text-align: left">CartPole-v1</td>
